[package]
name = "quick_builder"
version = "0.1.0"
edition = "2024"
authors = ["Jellybean Stonerfish <jellybean.stonerfish@gmail.com>"]
include = ["LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
clap = { version = "4.5.31", features = ["cargo"] }
we_clap = { version = "0.1", features = ["web-alert"] }

# We will depend on cliw here just for the example program output of the args.
# Your program doesn't need to depend on cliw for we_clap to work 
cliw = { version = "0.1" , features = [
    "alert",
]}
